Perkin-UAT/force-app/main/default/objects/Send_Mail_Settings__c/Send_Mail_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Batch Send Mail Settings</label>
</CustomObject>