Perkin-UAT/force-app/main/default/objects/Send_Mail_Settings__c/fields/Allowed_ProductLines__c.field-meta.xml
<CustomField>
    <fullName>Allowed_ProductLines__c</fullName>
    <label>Allowed ProductLines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>