Perkin-UAT/force-app/main/default/objects/Send_Mail_Settings__c/fields/bcc_mails__c.field-meta.xml
<CustomField>
    <fullName>bcc_mails__c</fullName>
    <label>bcc mails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>