Perkin-UAT/force-app/main/default/objects/Send_Mail_Settings__c/fields/Schedule_Send_Mail__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Send_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Send Mail</label>
    <type>Checkbox</type>
</CustomField>